@@ -6,6 +6,7 @@ PHP                                                                        NEWS
 - Changed error level E_ERROR into E_WARNING in Soap extension methods 
   parameter validation. (Felipe)
 
+- Fixed bug #46106 (Memory leaks when using global statement). (Dmitry)
 - Fixed bug #46087 (DOMXPath - segfault on destruction of a cloned object).
   (Ilia)
 - Fixed bug #46086 (Segfault when accessing fileinfo class properties).
